--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~10.0.6",
     "@angular/platform-browser-dynamic": "~10.0.6",
     "@angular/router": "~10.0.6",
+    "@ngrx/data": "^10.1.1",
     "@ngrx/effects": "^10.0.1",
     "@ngrx/entity": "^10.1.0",
     "@ngrx/router-store": "^10.0.1",
