--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "startproxy": "ng serve  --proxy-config ./proxy.json",
     "start4201": "ng serve --port=4201",
+    "server": "ts-node -P ./server/server.tsconfig.json ./server/server.ts",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -31,7 +33,8 @@
     "@ngrx/store-devtools": "^10.0.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.3"
+    "zone.js": "~0.10.3",
+    "express": "^4.16.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.5",
